--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,8 @@
     <br>
     <form action="usuario.do" method="GET">
         Id: <input name="id"><br>
-        Nome: <input name="nome">
+        Nome: <input name="nome"> <br>
+        Mensagem: <input name="mensagem">
         <input type="hidden" name="oper" value="1" />
         <button>Inserir</button>
     </form>
